# Drone_LTL_Planner

./: CMakeLists.txt  HOW2BUILD.txt  LTLTest2.cpp  LtlTest.cpp  README.md  build_and_run.sh  dronePath.csv  main.cpp
Gazebo_ArduCopter_MAVROS_MAVLink/: LTLStart.sh  README.md
Gazebo_ArduCopter_MAVROS_MAVLink/catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
Gazebo_ArduCopter_MAVROS_MAVLink/catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
Gazebo_ArduCopter_MAVROS_MAVLink/catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
Gazebo_ArduCopter_MAVROS_MAVLink/catkin_ws/devel/.private/iq_gnc/: .catkin  .rosinstall  _setup_util.py  setup.sh
Gazebo_ArduCopter_MAVROS_MAVLink/catkin_ws/devel/.private/iq_sim/: .catkin  .rosinstall  local_setup.sh
Gazebo_ArduCopter_MAVROS_MAVLink/catkin_ws/devel/.private/libmavconn/: .catkin  .rosinstall  local_setup.sh  setup.sh
Gazebo_ArduCopter_MAVROS_MAVLink/catkin_ws/devel/.private/mavros/: .catkin  (+1 more)
Gazebo_ArduCopter_MAVROS_MAVLink/catkin_ws/logs/iq_gnc/: build.check.022.log.stderr  build.check.025.log.stderr  build.check.028.log.stderr  build.cmake.000.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.009.log.stderr  build.make.021.log.stderr  build.make.026.log.stderr
Gazebo_ArduCopter_MAVROS_MAVLink/catkin_ws/logs/true_path_log/: build.check.008.log.stderr  build.check.009.log.stderr  build.check.011.log.stderr  build.cmake.000.log.stderr
Gazebo_ArduCopter_MAVROS_MAVLink/catkin_ws/logs/true_path_log_2/: build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr
Gazebo_ArduCopter_MAVROS_MAVLink/catkin_ws/src/: .rosinstall  .rosinstall.bak
Gazebo_ArduCopter_MAVROS_MAVLink/catkin_ws/src/true_path_log/: CMakeLists.txt
Gazebo_ArduCopter_MAVROS_MAVLink/catkin_ws/src/true_path_log_2/: CMakeLists.txt  package.xml
Gazebo_ArduCopter_MAVROS_MAVLink/catkin_ws/src/true_path_log_2/src/: new_path.cpp
archive/: RigidBodyPlanning.cpp
src/: MyGridDecomposition.cpp  MyGridDecomposition.h  MyPropDecomposition.cpp  MyPropDecomposition.h  helperFunctions.h  includeCore.h  path.txt
(+870 files in other folders)
